# Movie-Rating-System

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 086a3e8677e0_create_initial_tables.py
app/: config.py  logging_config.py  main.py
app/controllers/: __init__.py  movie_controller.py
app/db/: database.py
app/exceptions/: __init__.py  base.py  http_exceptions.py
app/models/: __init__.py  base.py  director.py  genre.py  movie.py  movie_genre.py  movie_rating.py
app/repositories/: __init__.py  base.py  director_repository.py  genre_repository.py  movie_repository.py  rating_repository.py
app/schemas/: __init__.py  base.py  director.py  genre.py  movie.py  rating.py
app/services/: __init__.py  movie_service.py  rating_service.py
scripts/: seed_check.py
